# globalOp

./: CMakeLists.txt
Matrix2Quat/: Matrix2Quat.sln
Matrix2Quat/Matrix2Quat/: Matrix2Quat.vcxproj  main.cpp
config/: 13.g2o  13_vspath.txt  final.g2o  final13.g2o  graph2mat_config.txt  manhattan_config.txt  mat2graph_config.txt  transformop_config.txt
config/tmp/: 1-2.g2o  1-2_vspath.txt  final1-2.g2o
src/: graph2mat_main.cpp  main.cpp  manhattan_main.cpp  mat2graph_main.cpp  transform_main.cpp  view_main.cpp
src/sensor/: CMakeLists.txt
src/sensor/include/: Constant.h  PlaneModel.h  PlaneModelSegmentation.h  utility.h
src/sensor/src/: Constant.cpp  PlaneModel.cpp  PlaneModelSegmentation.cpp  utility.cpp
